# SmartDesk

./: .coverage  .cursorrules  .gitignore  CHANGELOG.md  LICENSE  LOCALIZATION_MIGRATION.md  README.md  launch_gui.py  listener.txt  main.py  path_to_your_issue_file.md  pyproject.toml  requirements-dev.txt  requirements.txt  restart_hotkey_listener.py  run_tray.pyw  setup.py  start_smartdesk.bat
.gemini/: GEMINI.md
.github/workflows/: ci.yml  tests.yml
docs/: CHANGELOG.md  EXAMPLE_APPLICATIONS.md  FUNCTIONAL_DOCUMENTATION.md  GLOSSARY.md  README.md  RESOURCES.md  SPECIAL_FEATURES.md  USER_MANUAL.md  desktop_switch_prozess.md  hotkey_banner_flow.md  hotkey_system_documentation.md  ui_architecture.md
docs/adr/: ADR-005-rueckkehr-zu-psutil-explorer-restart.md  ADR-006-headless-qt-dialogs.md  (+2 more)
issues/: 123.md  bug-smartdesk-erstellte-neue-desktop-ordner
scripts/: backup_reg_paths.py  install.bat  install.ps1  install.py  restore.bat  restore_reg_paths.py  smartdesk_installer.iss  start-listener.vbs  start-tray.vbs  start.ps1  stop-listener.vbs  uninstall.bat  uninstall.py
tests/: __init__.py  conftest.py  test_auto_switch_optimization.py  test_auto_switch_service.py  test_banner_controller.py  test_desktop_handler.py  test_desktop_switch.py  test_file_operations.py  test_file_operations_cache.py  test_file_pid_storage_caching.py  test_gui_smoke.py  test_hotkey_listener_logic.py  test_hotkey_manager.py  test_icon_service.py  test_models.py  test_path_validator.py  test_protected_desktop.py  test_registry_operations.py  test_system_service.py  test_tray_menu.py
(+132 files in other folders)
